Enhance game mechanics and testing framework
- Updated pytest.ini to include new test files and suppress deprecation warnings from external libraries.
- Refactored GameController to improve action handling, including card purchase logic and selection management.
- Modified PlayerState to accommodate changes in card payment processing, ensuring proper token management.
- Updated card data in JSON to reflect new IDs and maintain consistency.
- Added automated tests for GameController to validate game mechanics and player interactions.
- Enhanced GameView to improve rendering and interaction feedback for players.

--- a/pytest.ini
+++ b/pytest.ini
@@ -10,4 +10,15 @@ python_files =
     test_royals.py
     test_actions.py
     test_desk.py
+    test_controller.py
     # test_env.py
+
+# Suppress deprecation warnings from external libraries
+filterwarnings =
+    ignore::DeprecationWarning:pkg_resources.*:
+    ignore::DeprecationWarning:setuptools.*:
+    ignore::DeprecationWarning:google.*:
+    ignore::DeprecationWarning:sphinxcontrib.*:
+    ignore::DeprecationWarning:zope.*:
+    ignore::DeprecationWarning:pygame.*:
+    ignore::DeprecationWarning
